--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,5 +36,5 @@ jobs:
           ip: ${{ secrets.IP }}
           password: ${{ secrets.PASSWORD }}
           database: ${{ secrets.DATABASE }}
-          user: ${{ secrets.USER }}
+          user: ${{ secrets.DB_USER }}
           secret: ${{ secrets.SECRET }}
