created swagger.json created pagination for the receives the lists

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,3 +6,4 @@ exposed_version=0.41.1
 h2_version=2.1.214
 kotlinx_serialization_version=2.2.4
 koin_version=3.5.2-RC1
+swagger_codegen_version=1.0.36
